Convert AgriSahay AI into full-stack Spring Boot 3 architecture and modernize UI to professional SaaS design